--- a/milestone2/milestone2/Makefile
+++ b/milestone2/milestone2/Makefile
@@ -4,5 +4,11 @@ all: main.c sensor_db.h sensor_db.c logger.h logger.c
 run: all
 	./main.out
 
+memtest: all
+	valgrind --leak-check=yes ./main.out
+
+clean:
+	rm -fr *.o
+
 zip:
 	zip milestone2.zip *.c *.h
