--- a/milestone3/Makefile
+++ b/milestone3/Makefile
@@ -4,5 +4,8 @@ zip:
 all: main.c sbuffer.c sbuffer.h
 	gcc *.c -o main.out -lpthread
 
+memtest: all
+	valgrind --leak-check=yes ./main.out
+
 clean:
 	rm -fr *.o
